--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,9 +2,10 @@ FROM node:20.11.1
 
 WORKDIR '/app'
 
-COPY package.json .
-RUN npm install
+COPY package.json yarn.lock ./
+
+RUN yarn install
 
 COPY . .
 
-CMD [ "npm", "run", "dev" ]
+CMD [ "yarn", "run", "dev" ]
