--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  portfolio:
+  server-aws:
     build: 
       context: .
       dockerfile: Dockerfile
     ports:
-      - 3000:3000
+      - 8080:3000
