--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon -e * ./bin/www "
+    "dev": "nodemon ./bin/www "
   },
   "dependencies": {
     "bad-words": "^3.0.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "knex": "^0.95.10",
+    "luxon": "2.0.2",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "yahoo-finance2": "^2.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "pg": "^8.11.3"
   }
 }
