--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "morgan": "~1.9.1",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "pg": "^8.11.3",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "yahoo-finance2": "^2.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
-    "pg": "^8.11.3"
+    "nodemon": "^3.0.3"
   }
 }
