--- a/apps/stockApp/client/package.json
+++ b/apps/stockApp/client/package.json
@@ -2,6 +2,7 @@
   "name": "stockApp",
   "version": "0.1.0",
   "private": true,
+  "homePage": "/apps/stockApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,7 +12,7 @@
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
-    "react-bootstrap-typeahead": "^6.3.2",
+    "react-bootstrap-typeahead": "4.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.1",
@@ -21,8 +22,8 @@
     "webpack": "4.44.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts  --openssl-legacy-provider build && cp build/index.html 200.html",
+    "start": "react-scripts start",
+    "build": "react-scripts build && cp build/index.html 200.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -32,7 +33,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://127.0.0.1:3000",
   "browserslist": {
     "production": [
       ">0.2%",
